--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -6,9 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
   </head>
+
+  <!-- Styling via the external method -->
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+
+  <!-- Styling via the internal method -->
+   <head>
+    <style>
+      p{
+        background-color: green;
+        color: white;
+        font-size: 18px;
+      }
+    </style>
+   </head>
+
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <!-- Styling via the inline method -->
+    <button style="background-color: orange; font-size: 18px;">Inline Method</button>
   </body>
 </html>
