--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -7,11 +7,23 @@
     <title>Class and ID Selectors</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <!-- Adding all odd numbered to a class called odd-number -->
+    <div class="odd-number">
+      <p>Number 1 - I'm a class!</p>
+    </div>
+    <div id="number">Number 2 - I'm one ID.</div>
+    <div class="odd-number">
+      <p style="font-size: 24px;">Number 3 - I'm a class, but cooler!</p>
+    </div>
+    <div id="numberfour">Number 4 - I'm another ID.</div>
+    <div class="odd-number">
+      <p>Number 5 - I'm a class!</p>
+    </div>
   </body>
 </html>
